karnc/tests/fixtures/positive/168_cross_ctx_capability_alias/src/ops/jobs.karn
context ops.jobs

consumes platform.time as Time

service tick {
  on call() -> Effect[Int] given Time.Clock {
    let t <- Time.Clock.now()
    t
  }
}
