karnc/tests/fixtures/negative/135_integration_unwired_dependency/src/app/bystander.karn
context app.bystander
service idle {
  on call() -> Effect[Int] { 0 }
}
